<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.Register">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="130dp">




        <EditText
            android:id="@+id/Register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/Register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/register_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/phone_number"/>

        <EditText
            android:id="@+id/Register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/repeatPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/repeat_password" />

        <EditText
            android:id="@+id/PassPhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Pass Phrase"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/register" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/imageView"

            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="5dp"

            android:background="#33000000" />

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"

            android:text="Browse" />

    </LinearLayout>



    <!-- toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Mstore.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Mstore.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <Switch
        android:id="@+id/adminSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:textColor="#F97833"
        android:textStyle="bold"/>





</androidx.coordinatorlayout.widget.CoordinatorLayout>