<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Account.AccountFragment"
    android:id="@+id/account_fragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewAcc"

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:gravity="center"/>

        <TextView
            android:id="@+id/UserNameAcc"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/textColor"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_n1"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/EmailAcc"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/textColor"
            android:background="@drawable/background_n1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Switch
                android:id="@+id/switchPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:checked="true"
                android:text="@string/show_profile_photo">

            </Switch>


        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
        <Button
            android:id="@+id/SignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha=".9"
            android:layout_marginRight="20dp"
            android:text="@string/sign_out"
            android:layout_marginEnd="20dp" />
        <Button
            android:id="@+id/updateInfoAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:alpha=".9"
            android:text="@string/update_info"
            android:layout_marginStart="20dp" />
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/adminLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You are an admin"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".9"
            android:text="monitor">

        </Button>

    </LinearLayout>

</LinearLayout>