<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MyList.AddProduct">
    <LinearLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/imageViewProductEdit"

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#33000000"

            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/browseProductEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:text="Browse"

            android:layout_marginStart="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/productNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/product_name"
            />

        <EditText
            android:id="@+id/productPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/price"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/infoProductEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/information"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/userPassEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/your_password"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/updateSubmit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#1700897B"
        >
        <EditText
            android:id="@+id/userPassEditRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/your_password"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/removeSubmit"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Remove" />

    </LinearLayout>


</LinearLayout>